fixed flex wrap by adjusting gap

--- a/public/css/index.content.css
+++ b/public/css/index.content.css
@@ -397,9 +397,9 @@
 .ticket-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: start;
-  gap: 2%;
+  gap: 1%;
 }
 
 .ticket-container {
